--- a/feature-staking-impl/src/main/res/layout/fragment_rebond_custom.xml
+++ b/feature-staking-impl/src/main/res/layout/fragment_rebond_custom.xml
@@ -2,33 +2,52 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rebondContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/rebondContainer"
     android:orientation="vertical"
     tools:background="@color/black">
 
     <io.novafoundation.nova.common.view.Toolbar
-        android:layout_width="match_parent"
         android:id="@+id/rebondToolbar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:dividerVisible="false"
         app:homeButtonIcon="@drawable/ic_close"
         app:titleText="@string/staking_rebond" />
 
-    <io.novafoundation.nova.common.view.AmountView
+    <io.novafoundation.nova.feature_wallet_api.presentation.view.amount.ChooseAmountView
+        android:id="@+id/rebondAmount"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:id="@+id/rebondAmount"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp" />
 
-    <io.novafoundation.nova.feature_wallet_api.presentation.view.FeeView
+    <io.novafoundation.nova.common.view.TableCellView
+        android:id="@+id/rebondTransferable"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:id="@+id/rebondFee"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        app:dividerVisible="false"
+        app:title="@string/wallet_balance_transferable" />
+
+    <io.novafoundation.nova.feature_wallet_api.presentation.view.FeeView
+        android:id="@+id/rebondFee"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        app:dividerVisible="false" />
+
+    <io.novafoundation.nova.common.mixin.hints.HintsView
+        android:id="@+id/rebondHints"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp" />
 
     <Space
@@ -37,11 +56,11 @@
         android:layout_weight="1" />
 
     <io.novafoundation.nova.common.view.PrimaryButton
+        android:id="@+id/rebondContinue"
         style="@style/Widget.Nova.Button.Primary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:id="@+id/rebondContinue"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:text="@string/common_continue" />
