--- a/feature-staking-impl/src/main/res/layout/fragment_confirm_reward_destination.xml
+++ b/feature-staking-impl/src/main/res/layout/fragment_confirm_reward_destination.xml
@@ -12,14 +12,13 @@
         android:id="@+id/confirmRewardDestinationToolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:titleText="@string/common_confirm" />
+        app:dividerVisible="false"
+        app:titleText="@string/staking_reward_destination" />
 
-    <io.novafoundation.nova.common.view.LabeledTextView
-        android:id="@+id/confirmRewardDestinationOriginAccount"
+    <io.novafoundation.nova.feature_wallet_api.presentation.view.extrinsic.GenericExtrinsicInformationView
         android:layout_width="match_parent"
-        app:label="@string/account_info_title"
-        app:actionIcon="@drawable/ic_more"
         android:layout_height="wrap_content"
+        android:id="@+id/confirmRewardDestinationExtrinsicInformation"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp" />
@@ -29,7 +28,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="12dp"
         android:layout_marginEnd="16dp" />
 
     <Space
@@ -37,25 +36,11 @@
         android:layout_height="0dp"
         android:layout_weight="1" />
 
-    <LinearLayout
+    <io.novafoundation.nova.common.view.PrimaryButton
+        android:id="@+id/confirmRewardDestinationConfirm"
+        style="@style/Widget.Nova.Button.Primary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/black4"
-        android:orientation="vertical">
-
-        <io.novafoundation.nova.feature_wallet_api.presentation.view.FeeView
-            android:id="@+id/confirmRewardDestinationFee"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp" />
-
-        <io.novafoundation.nova.common.view.PrimaryButton
-            android:id="@+id/confirmRewardDestinationConfirm"
-            style="@style/Widget.Nova.Button.Primary"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:text="@string/common_confirm" />
-    </LinearLayout>
+        android:layout_margin="16dp"
+        android:text="@string/common_confirm" />
 </LinearLayout>
