--- a/feature-staking-impl/src/main/res/layout/fragment_confirm_payout.xml
+++ b/feature-staking-impl/src/main/res/layout/fragment_confirm_payout.xml
@@ -12,142 +12,38 @@
         android:id="@+id/confirmPayoutToolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:titleText="@string/common_confirm" />
+        app:dividerVisible="false"
+        app:titleText="@string/staking_payout" />
 
-    <io.novafoundation.nova.common.view.LabeledTextView
-        android:id="@+id/confirmPayoutOriginAccount"
+    <io.novafoundation.nova.feature_wallet_api.presentation.view.amount.PrimaryAmountView
+        android:id="@+id/confirmPayoutAmount"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        app:actionIcon="@drawable/ic_more"
-        app:label="@string/account_info_title" />
+        android:layout_marginEnd="16dp" />
 
-    <io.novafoundation.nova.common.view.LabeledTextView
-        android:id="@+id/confirmPayoutRewardDestination"
+    <io.novafoundation.nova.feature_wallet_api.presentation.view.extrinsic.GenericExtrinsicInformationView
+        android:id="@+id/confirmPayoutExtrinsicInformation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        app:actionIcon="@drawable/ic_more"
-        app:label="@string/staking_rewards_destination_title_v2_0_0" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:orientation="horizontal"
-        android:paddingTop="16dp"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp"
-        android:paddingBottom="15dp">
-
-        <TextView
-            style="@style/TextAppearance.NovaFoundation.Body1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/staking_reward"
-            android:textColor="@color/gray1" />
-
-        <TextView
-            android:id="@+id/confirmPayoutRewardToken"
-            style="@style/TextAppearance.NovaFoundation.Body1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            tools:text="0.0001 KSM"
-            android:textColor="@color/white" />
-
-        <TextView
-            android:id="@+id/confirmPayoutRewardFiat"
-            style="@style/TextAppearance.NovaFoundation.Body1"
-            android:layout_width="wrap_content"
-            tools:text="$0.5"
-            android:layout_height="wrap_content"
-            android:textColor="@color/gray2" />
-    </LinearLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:background="@color/gray3" />
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="16dp" />
 
     <Space
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1" />
 
-    <LinearLayout
+    <io.novafoundation.nova.common.view.PrimaryButton
+        android:id="@+id/confirmPayoutConfirm"
+        style="@style/Widget.Nova.Button.Primary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/gray4"
-        android:orientation="vertical">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginEnd="16dp"
-            android:orientation="horizontal">
-
-            <TextView
-                style="@style/TextAppearance.NovaFoundation.Body1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/network_fee"
-                android:textColor="@color/gray1" />
-
-            <ProgressBar
-                android:layout_width="16dp"
-                android:indeterminate="true"
-                android:id="@+id/confirmPayoutFeeProgress"
-                android:layout_gravity="center_vertical"
-                android:indeterminateTint="@color/white"
-                android:layout_height="16dp" />
-
-            <TextView
-                android:id="@+id/confirmPayoutFeeToken"
-                style="@style/TextAppearance.NovaFoundation.Body1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:visibility="gone"
-                android:textColor="@color/white" />
-
-
-            <TextView
-                android:id="@+id/confirmPayoutFeeFiat"
-                style="@style/TextAppearance.NovaFoundation.Body1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/gray2" />
-        </LinearLayout>
-
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginEnd="16dp"
-            android:background="@color/gray3" />
-
-        <io.novafoundation.nova.common.view.PrimaryButton
-            android:id="@+id/confirmPayoutConfirm"
-            style="@style/Widget.Nova.Button.Primary"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="22dp"
-            android:text="@string/common_confirm" />
-    </LinearLayout>
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="22dp"
+        android:text="@string/common_confirm" />
 </LinearLayout>
