--- a/feature-staking-impl/src/main/res/layout/fragment_payouts_list.xml
+++ b/feature-staking-impl/src/main/res/layout/fragment_payouts_list.xml
@@ -1,123 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/payoutsListContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:background="@color/black">
 
     <io.novafoundation.nova.common.view.Toolbar
         android:id="@+id/payoutsListToolbar"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:dividerVisible="false"
         app:homeButtonIcon="@drawable/ic_close"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:titleText="@string/staking_reward_payouts_title_v2_2_0" />
 
-    <TextView
-        style="@style/TextAppearance.NovaFoundation.Body2"
-        android:id="@+id/payoutInstructionTextView"
+    <io.novafoundation.nova.common.view.AdvertisementCard
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/staking_pending_rewards_info_v2_2_0"
-        android:textColor="@color/black1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/payoutsListToolbar"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="8dp"/>
-
-    <View
-        android:id="@+id/payoutDivider"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
+        android:id="@+id/payoutAdvertisement"
         android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/payoutInstructionTextView"
-        android:background="@color/dividerGray" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/payoutsList"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:clipToPadding="false"
-        android:paddingTop="8dp"
-        android:paddingBottom="80dp"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/payoutDivider"
-        tools:itemCount="20"
-        tools:listitem="@layout/item_list_default" />
-
-    <io.novafoundation.nova.common.view.PrimaryButton
-        android:id="@+id/payoutsListAll"
-        style="@style/Widget.Nova.Button.Primary"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="24dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:text="Payout all (0.00345 KSM)" />
+        android:background="@drawable/bg_advertisement_yellow"
+        app:image="@drawable/advertisement_calendar"
+        app:subtitle="@string/staking_pending_rewards_subtitle"
+        app:title="@string/staking_pending_rewards_title" />
 
-    <ProgressBar
-        android:id="@+id/payoutsListProgress"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:indeterminateTint="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/payoutsListToolbar" />
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/payoutsPlaceholderIcon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_placeholder"
-        app:layout_constraintBottom_toTopOf="@+id/payoutsPlaceholderText"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        android:layout_marginBottom="18dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/payoutsListToolbar"
-        app:layout_constraintVertical_chainStyle="packed" />
+        <io.novafoundation.nova.common.view.PlaceholderView
+            android:id="@+id/payoutListPlaceholder"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="32dp"
+            android:text="@string/staking_reward_payouts_empty_rewards_v2_2_0"
+            android:visibility="gone"
+            app:image="@drawable/ic_placeholder"
+            app:showBackground="false" />
 
-    <TextView
-        android:id="@+id/payoutsPlaceholderText"
-        style="@style/TextAppearance.NovaFoundation.Body2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="@string/staking_reward_payouts_empty_rewards_v2_2_0"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/payoutsPlaceholderIcon" />
+        <ProgressBar
+            android:id="@+id/payoutsListProgress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="32dp"
+            android:indeterminateTint="@color/white" />
 
-    <androidx.constraintlayout.widget.Group
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        tools:visibility="visible"
-        app:constraint_referenced_ids="payoutsPlaceholderIcon, payoutsPlaceholderText"
-        android:id="@+id/payoutsPlaceholderGroup" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/payoutsList"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clipToPadding="false"
+            android:paddingTop="16dp"
+            android:paddingBottom="80dp"
+            android:visibility="gone"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:itemCount="20"
+            tools:listitem="@layout/item_list_default" />
 
-    <androidx.constraintlayout.widget.Group
-        android:id="@+id/payoutListContentGroup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        app:constraint_referenced_ids="payoutsList,payoutsListAll" />
+        <io.novafoundation.nova.common.view.PrimaryButton
+            android:id="@+id/payoutsListAll"
+            style="@style/Widget.Nova.Button.Primary"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="24dp"
+            android:visibility="gone"
+            tools:text="Payout all (0.00345 KSM)" />
+    </FrameLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
