--- a/common/src/main/res/values/colors.xml
+++ b/common/src/main/res/values/colors.xml
@@ -50,7 +50,9 @@
     <color name="account_icon_dark">@color/black</color>
 
     <color name="red">#FF3A69</color>
+
     <color name="yellow">#FFE711</color>
+    <color name="yellow_12">#1FFFE711</color>
 
     <color name="bar_bg_64">#A8252528</color>
 
