--- a/common/src/main/res/layout/view_advertisement_card.xml
+++ b/common/src/main/res/layout/view_advertisement_card.xml
@@ -22,6 +22,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        app:layout_constraintHorizontal_bias="0"
         app:layout_constrainedWidth="true"
         app:layout_constraintEnd_toStartOf="@id/advertisementCardImage"
         app:layout_constraintStart_toStartOf="parent"
