--- a/feature-staking-impl/src/main/res/layout/fragment_set_controller_account.xml
+++ b/feature-staking-impl/src/main/res/layout/fragment_set_controller_account.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
+    android:id="@+id/confirmSetControllerContainer"
     android:orientation="vertical"
     tools:background="@color/black">
 
@@ -12,149 +12,93 @@
         android:id="@+id/setControllerToolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:dividerVisible="false"
         app:homeButtonIcon="@drawable/ic_close"
         app:titleText="@string/staking_controller_account" />
 
-    <TextView
-        style="@style/TextAppearance.NovaFoundation.Body1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:includeFontPadding="false"
-        android:text="@string/staking_set_separate_account_controller_v2_2_0"
-        android:textColor="@android:color/white" />
-
-    <io.novafoundation.nova.common.view.LabeledTextView
-        android:id="@+id/setControllerStashAccount"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        app:actionIcon="@drawable/ic_more"
-        app:label="@string/staking_stash_account" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_info_16"
-            app:tint="@color/black2" />
-
-        <TextView
-            style="@style/TextAppearance.NovaFoundation.Body2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:includeFontPadding="false"
-            android:text="@string/staking_stash_can_hint_v2_2_0"
-            android:textColor="@color/black1" />
-    </LinearLayout>
-
-    <io.novafoundation.nova.common.view.LabeledTextView
-        android:id="@+id/setControllerDestinationAccount"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        app:actionIcon="@drawable/ic_chevron_down"
-        app:label="@string/staking_controller_account" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_info_16"
-            app:tint="@color/black2" />
-
-        <TextView
-            style="@style/TextAppearance.NovaFoundation.Body2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:includeFontPadding="false"
-            android:text="@string/staking_controller_can_hint_v2_2_0"
-            android:textColor="@color/black1" />
-    </LinearLayout>
-
-    <io.novafoundation.nova.feature_wallet_api.presentation.view.FeeView
-        android:id="@+id/setControllerFee"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp" />
-
-    <TextView
-        android:id="@+id/setControllerLearnMore"
-        style="@style/TextAppearance.NovaFoundation.Body1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:background="@drawable/bg_primary_list_item"
-        android:drawablePadding="16dp"
-        android:paddingStart="16dp"
-        android:paddingTop="12dp"
-        android:paddingEnd="16dp"
-        android:paddingBottom="12dp"
-        android:text="@string/common_learn_more_v2_2_0"
-        app:drawableEndCompat="@drawable/ic_chevron_right"
-        app:drawableStartCompat="@drawable/ic_nova" />
-
-    <Space
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:overScrollMode="never">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="24dp"
-        android:orientation="horizontal"
-        android:gravity="center|start"
-        android:id="@+id/setControllerNotStashWarning">
-
-        <ImageView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_warning_filled" />
+            android:orientation="vertical"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp">
 
-        <TextView
-            style="@style/TextAppearance.NovaFoundation.Body2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:includeFontPadding="false"
-            android:text="@string/staking_switch_account_to_stash"
-            android:textColor="@color/black1" />
-    </LinearLayout>
+            <io.novafoundation.nova.common.view.AdvertisementCard
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:id="@+id/setControllerAdvertisement"
+                android:background="@drawable/bg_advertisement_grey"
+                app:image="@drawable/shield"
+                app:learnMore="@string/common_find_out_more"
+                app:subtitle="@string/staking_set_controller_subtitle"
+                app:title="@string/staking_set_controller_title" />
+
+            <io.novafoundation.nova.common.view.AlertView
+                android:id="@+id/setControllerSwitchToStashWarning"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="@string/staking_switch_account_to_stash"
+                app:style="warning" />
+
+            <TextView
+                style="@style/TextAppearance.NovaFoundation.SemiBold.Body"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:text="@string/staking_stash" />
+
+            <TextView
+                style="@style/TextAppearance.NovaFoundation.Regular.Footnote"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:text="@string/staking_stash_can_hint_v2_2_0" />
+
+            <io.novafoundation.nova.feature_account_api.view.AddressView
+                android:id="@+id/setControllerStash"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                app:actionIcon="@drawable/ic_info_16" />
+
+            <TextView
+                style="@style/TextAppearance.NovaFoundation.SemiBold.Body"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:text="@string/staking_controller" />
+
+            <TextView
+                style="@style/TextAppearance.NovaFoundation.Regular.Footnote"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:text="@string/staking_controller_can_hint_v2_2_0" />
+
+            <io.novafoundation.nova.feature_account_api.view.AddressView
+                android:id="@+id/setControllerController"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp" />
+
+        </LinearLayout>
+    </ScrollView>
 
     <io.novafoundation.nova.common.view.PrimaryButton
-        android:id="@+id/setControllerContinueBtn"
+        android:id="@+id/setControllerContinue"
         style="@style/Widget.Nova.Button.Primary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:enabled="false"
+        android:visibility="gone"
         android:text="@string/common_continue" />
 
 </LinearLayout>
