Redesign controller flow (#216)
* Redesign controller flow

* Fix addressView with only title

* Add info icon to controller cell on confirm

--- a/feature-account-api/src/main/res/layout/view_address.xml
+++ b/feature-account-api/src/main/res/layout/view_address.xml
@@ -40,6 +40,8 @@
         app:layout_goneMarginBottom="9dp"
         android:includeFontPadding="false"
         android:textColor="@color/white"
+        android:ellipsize="middle"
+        android:singleLine="true"
         app:layout_constraintBottom_toTopOf="@+id/addressSubtitle"
         app:layout_constraintEnd_toStartOf="@id/addressAction"
         app:layout_constraintHorizontal_bias="0.5"
@@ -71,13 +73,12 @@
 
     <ImageView
         android:id="@+id/addressAction"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginEnd="16dp"
         android:background="@drawable/bg_primary_list_item"
         android:clickable="true"
         android:focusable="true"
-        android:padding="@dimen/x1"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
