--- a/feature-staking-impl/src/main/res/layout/fragment_current_validators.xml
+++ b/feature-staking-impl/src/main/res/layout/fragment_current_validators.xml
@@ -12,31 +12,23 @@
         android:id="@+id/currentValidatorsToolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:homeButtonIcon="@drawable/ic_close"
+        app:dividerVisible="false"
         app:textRight="@string/common_change"
         app:titleText="@string/staking_your_validators" />
 
-    <TextView
+    <io.novafoundation.nova.common.view.AlertView
         android:id="@+id/currentValidatorsOversubscribedMessage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
         android:drawablePadding="8dp"
+        android:layout_marginBottom="4dp"
         android:text="@string/staking_your_oversubscribed_message"
-        app:drawableStartCompat="@drawable/ic_warning_filled"
-        android:visibility="gone"/>
-
-    <View
-        android:id="@+id/payoutDivider"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:background="@color/dividerGray"
-        app:layout_constraintTop_toBottomOf="@+id/payoutInstructionTextView" />
+        android:visibility="gone"
+        tools:visibility="visible"
+        app:drawableStartCompat="@drawable/ic_warning_filled" />
 
     <ProgressBar
         android:id="@+id/currentValidatorsProgress"
