--- a/feature-staking-impl/src/main/res/layout/item_current_validator_group.xml
+++ b/feature-staking-impl/src/main/res/layout/item_current_validator_group.xml
@@ -3,33 +3,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:paddingStart="16dp"
-    android:paddingTop="21dp"
+    android:id="@+id/itemCurrentValidatorContainer"
+    android:paddingTop="16dp"
     android:paddingEnd="16dp"
     android:paddingBottom="8dp"
     tools:background="@color/black">
 
     <TextView
         android:id="@+id/itemCurrentValidatorGroupStatus"
-        style="@style/TextAppearance.NovaFoundation.CapsTitle2"
+        style="@style/TextAppearance.NovaFoundation.SemiBold.Body"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:drawablePadding="8dp"
+        android:layout_marginBottom="8dp"
         android:includeFontPadding="false"
-        app:drawableStartCompat="@drawable/ic_status_indicator"
+        android:drawablePadding="8dp"
+        tools:drawableStart="@drawable/ic_checkmark_circle_16"
         tools:drawableTint="@color/green"
-        tools:text="active (1)"
-        tools:textColor="@color/green" />
+        tools:text="Active (1)" />
 
     <TextView
-        style="@style/TextAppearance.AppCompat.Body2"
-        android:layout_width="wrap_content"
         android:id="@+id/itemCurrentValidatorGroupDescription"
+        style="@style/TextAppearance.NovaFoundation.Regular.Footnote"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/black1"
+        android:textColor="@color/white_64"
         tools:text="Your stake is allocated to the following validator." />
 
 </LinearLayout>
